--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DATABASE_URL=postgres://localhost/lightlist nodemon server.js"
+    "start:dev": "DATABASE_URL=postgres://localhost/lightlist nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
